--- a/src/reportes/ReporteProveedor.jrxml
+++ b/src/reportes/ReporteProveedor.jrxml
@@ -1,29 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE jasperReport PUBLIC "-//JasperReports//DTD JasperReport//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
-
-<jasperReport name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-    <background>
-        <band/>
-    </background>
-    <title>
-        <band height="79"/>
-    </title>
-    <pageHeader>
-        <band height="35"/>
-    </pageHeader>
-    <columnHeader>
-        <band height="61"/>
-    </columnHeader>
-    <detail>
-        <band height="125"/>
-    </detail>
-    <columnFooter>
-        <band height="45"/>
-    </columnFooter>
-    <pageFooter>
-        <band height="54"/>
-    </pageFooter>
-    <summary>
-        <band height="42"/>
-    </summary>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9cc36b3b-967d-4811-8536-3e88478f3810">
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
+	<parameter name="fecha" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<queryString>
+		<![CDATA[SELECT
+     proveedor.`Empresa_id` AS proveedor_Empresa_id,
+     proveedor.`Nombre_Empresa` AS proveedor_Nombre_Empresa,
+     proveedor.`Direccion_Empresa` AS proveedor_Direccion_Empresa,
+     proveedor.`rtn_empresa` AS proveedor_rtn_empresa,
+     proveedor.`fecha_registro` AS proveedor_fecha_registro
+FROM
+     `proveedor` proveedor
+WHERE proveedor.fecha_registro = $P{fecha}]]>
+	</queryString>
+	<field name="proveedor_Empresa_id" class="java.lang.Integer"/>
+	<field name="proveedor_Nombre_Empresa" class="java.lang.String"/>
+	<field name="proveedor_Direccion_Empresa" class="java.lang.String"/>
+	<field name="proveedor_rtn_empresa" class="java.lang.String"/>
+	<field name="proveedor_fecha_registro" class="java.sql.Date"/>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band height="114" splitType="Stretch">
+			<image>
+				<reportElement x="18" y="7" width="230" height="107" uuid="e21a3407-053e-4248-93cc-2aca7f7d643d"/>
+				<imageExpression><![CDATA["C:\\Users\\Luis Cueva\\Documents\\Luis\\UJCV\\Ing Software\\Proyecto_Facturacion\\src\\Imagenes\\320202011614.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="154" y="34" width="313" height="44" uuid="6e2edd51-2236-46c2-9b46-ca6e47ebdccd"/>
+				<textElement>
+					<font size="30"/>
+				</textElement>
+				<text><![CDATA[Reporte de Proveedor]]></text>
+			</staticText>
+			<textField pattern="EEEEE dd MMMMM yyyy">
+				<reportElement x="442" y="94" width="100" height="20" uuid="89733389-cada-40f4-a320-3afce97b431d"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="14" splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band height="27" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="0" width="58" height="20" uuid="04b0d575-f12c-4dea-b76e-7ced2a458161"/>
+				<text><![CDATA[Id  ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="58" y="0" width="100" height="20" uuid="4a353d33-d10c-4541-98e0-77b913a01b75"/>
+				<text><![CDATA[Nombre]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="158" y="0" width="100" height="20" uuid="307100d6-a2b3-4dc4-96f0-c525c8379d1a"/>
+				<text><![CDATA[Direccion]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="258" y="0" width="100" height="20" uuid="e7f8063a-2da4-41f6-935e-511f7a8b68e5"/>
+				<text><![CDATA[RTN ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="358" y="0" width="100" height="20" uuid="dd8fe918-6b22-4983-9ba4-94b65aaa0674"/>
+				<text><![CDATA[Fecha de registro]]></text>
+			</staticText>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="31" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="58" height="20" uuid="7e27b553-2e80-4b15-b2a4-9953872a8c51"/>
+				<textFieldExpression><![CDATA[$F{proveedor_Empresa_id}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="58" y="0" width="96" height="20" uuid="3d3a25a4-0823-4aa5-a432-18f0a5cee760"/>
+				<textFieldExpression><![CDATA[$F{proveedor_Nombre_Empresa}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="158" y="0" width="100" height="20" uuid="455d122e-e44c-459b-925b-147422e08088"/>
+				<textFieldExpression><![CDATA[$F{proveedor_Direccion_Empresa}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="258" y="0" width="100" height="20" uuid="3a5ccd18-e442-4f07-9068-ded688749893"/>
+				<textFieldExpression><![CDATA[$F{proveedor_rtn_empresa}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="367" y="0" width="100" height="20" uuid="92ba3e95-439a-4e1c-8249-1b3e87628203"/>
+				<textFieldExpression><![CDATA[$F{proveedor_fecha_registro}]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="45" splitType="Stretch">
+			<textField>
+				<reportElement x="212" y="13" width="80" height="20" uuid="139932bd-43ac-429e-a69c-20eba3507bd1"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="292" y="13" width="40" height="20" uuid="aa53bc08-1e42-4ca4-a390-5a683af4c895"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="21" splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band height="12" splitType="Stretch"/>
+	</summary>
 </jasperReport>
