--- a/src/inicio_sesion/PanelRecupera.form
+++ b/src/inicio_sesion/PanelRecupera.form
@@ -58,7 +58,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Para recuperar su usuario y contrase&#xf1;a debe introducir el c&#xf3;digo"/>
+        <Property name="text" type="java.lang.String" value="Comuniquese con un administrador del sistema para que provea el "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -69,7 +69,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="de recuperaci&#xf3;n que se gener&#xf3; al crear el usuario o el que el"/>
+        <Property name="text" type="java.lang.String" value="codigo de recuperacion. "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
@@ -80,7 +80,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Administrador le proporciono al darlo de alta en el sistema."/>
+        <Property name="text" type="java.lang.String" value="Introduzca el codigo de recuperacion."/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel2">
