--- a/src/contactos/contacto_cliente/ContactoC.form
+++ b/src/contactos/contacto_cliente/ContactoC.form
@@ -406,7 +406,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="usuario">
+    <Component class="javax.swing.JLabel" name="usuarios">
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
       </AuxValues>
