--- a/src/Compra/ModeloCompra1.form
+++ b/src/Compra/ModeloCompra1.form
@@ -674,7 +674,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="usuarioslh">
+    <Component class="javax.swing.JLabel" name="usuario">
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
       </AuxValues>
