--- a/src/inicio_sesion/Pantalla_Inicio_Sesion.form
+++ b/src/inicio_sesion/Pantalla_Inicio_Sesion.form
@@ -50,6 +50,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_usuario">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_usuarioActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
