--- a/src/producto/Producto.form
+++ b/src/producto/Producto.form
@@ -463,7 +463,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="usuario">
+    <Component class="javax.swing.JLabel" name="usuarios">
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
       </AuxValues>
